--- a/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d1978a7472c63f230e891b1b12f4b22969faccfb114eda178b2eeea2b1dc2859"
+  "signature": "sha256:a842108aeadcebd01f3fb4270e8ac3cac5b36b591328a1d6713d0640fd668ed1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -67,25 +67,6 @@
       "    if sort:\n",
       "        c = np.sort(c, axis=0)\n",
       "    return c\n",
-      "\n",
-      "def generate_trainset(ndata, r_max=10):\n",
-      "    s_0, s_1 = random_s(ndata, True)\n",
-      "    c_0, c_1 = np.ones((2, ndata)) * .5\n",
-      "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
-      "    return r, s, c\n",
-      "\n",
-      "def generate_trainset_c(ndata, low=.3, high=.7, r_max=10):\n",
-      "    s_0, s_1 = random_s(ndata, True)\n",
-      "    c_0, c_1 = np.concatenate((np.ones((2, ndata/2)) * low, np.ones((2, ndata/2)) * high), axis=1)\n",
-      "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
-      "    return r, s, c\n",
-      "\n",
-      "def generate_testset_c(ndata, low=.3, high=.7, r_max=10):\n",
-      "    s_0, s_1 = random_s(ndata, True)\n",
-      "    c_range = high - low\n",
-      "    c_0, c_1 = np.random.rand(2, ndata) * c_range + low\n",
-      "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
-      "    return r, s, c\n",
       "    \n",
       "def generate_popcode_data(ndata, nneuron, sigtc_sq, r_max, noise, sort, s_0, s_1, c_0, c_1, c_50=13.1):\n",
       "    c_rms = np.sqrt(np.square(c_0) + np.square(c_1))\n",
@@ -104,9 +85,25 @@
       "        r = np.random.poisson(r) + 0.0\n",
       "    return r, s, c\n",
       "\n",
-      "def generate_testset(stim_0, stim_1, ndata, con_0=.5, con_1=.5, constant_c=True, discrete_c=None, low=.5, high=.5, r_max=10):\n",
-      "    #c_0, c_1 = np.ones((2, ndata)) * .5\n",
-      "    if constant_c or not discrete_c:\n",
+      "def generate_trainset(ndata, highlow=False, discrete_c=None, low=.3, high=.7, r_max=10):\n",
+      "    s_0, s_1 = random_s(ndata, True)\n",
+      "    if highlow:\n",
+      "        c_0, c_1 = np.concatenate((np.ones((2, ndata/2)) * low, np.ones((2, ndata/2)) * high), axis=1)\n",
+      "    elif discrete_c:\n",
+      "        cs = np.linspace(low, high, discrete_c)\n",
+      "        perm_cs = list(product(cs, cs))\n",
+      "        c_0, c_1 = np.repeat(perm_cs, ndata/(discrete_c**2), axis=0).T\n",
+      "        print ndata/(discrete_c**2), \"trials per contrast level\"\n",
+      "        if ndata%(discrete_c**2) != 0:\n",
+      "            print \"Not divisible, only generated\", ndata / (discrete_c**2) * (discrete_c**2), \"trials\"\n",
+      "        ndata = ndata / (discrete_c**2) * (discrete_c**2)\n",
+      "    else:\n",
+      "        c_0, c_1 = np.ones((2, ndata)) * .5\n",
+      "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
+      "    return r, s, c\n",
+      "\n",
+      "def generate_testset(stim_0, stim_1, ndata, con_0, con_1, discrete_c=None, low=.5, high=.5, r_max=10):\n",
+      "    if con_0:\n",
       "        c_0 = np.ones(ndata) * con_0\n",
       "        c_1 = np.ones(ndata) * con_1\n",
       "    else:\n",
@@ -121,9 +118,12 @@
       "            ndata = ndata / (discrete_c**2) * (discrete_c**2)\n",
       "        else:\n",
       "            c_0, c_1 = np.random.rand(2, ndata) * c_range + low\n",
-      "    s_0, s_1 = np.ones((2, ndata))\n",
-      "    s_0 = s_0 * stim_0\n",
-      "    s_1 = s_1 * stim_1\n",
+      "    if not stim_0:\n",
+      "        s_0, s_1 = random_s(ndata, True)\n",
+      "    else:\n",
+      "        s_0, s_1 = np.ones((2, ndata))\n",
+      "        s_0 = s_0 * stim_0\n",
+      "        s_1 = s_1 * stim_1\n",
       "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
       "    return r, s, c\n",
       "\n",
@@ -247,13 +247,13 @@
       "    var1 = expsquare1 - np.square(mean1)\n",
       "    var2 = expsquare2 - np.square(mean2)\n",
       "    return mean1, mean2, var1, var2\n",
-      "def posterior_setup(low=.3, high=.7, discrete_cs = 3, num_s=100, r_max=10):\n",
+      "def posterior_setup(low=.3, high=.7, discrete_c = 3, num_s=100, r_max=10):\n",
       "    grid = np.linspace(-60, 60, num_s)\n",
       "    s1s = np.concatenate([[grid[i]]*(num_s-i) for i in range(num_s)])\n",
-      "    cs = np.linspace(low, high, discrete_cs)\n",
+      "    cs = np.linspace(low, high, discrete_c)\n",
       "    s1_grid, c1_grid, c2_grid = cartesian((s1s, cs, cs)).T\n",
       "    s2s = np.concatenate([grid[i:num_s+1] for i in range(num_s)])\n",
-      "    s2_grid = np.repeat(s2s, (discrete_cs**2), axis=0)\n",
+      "    s2_grid = np.repeat(s2s, (discrete_c**2), axis=0)\n",
       "    means = lik_means(s1_grid, s2_grid, c_0=c1_grid, c_1=c2_grid, r_max=r_max)\n",
       "    partial_post = partial(posterior, means=means, s1_grid=s1_grid, s2_grid=s2_grid)\n",
       "    return partial_post\n",
@@ -266,7 +266,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -302,40 +302,55 @@
      "collapsed": false,
      "input": [
       "s1 = -30\n",
+      "discrete_c = 3\n",
+      "ndata = 306\n",
+      "ndata_per_c = ndata/(discrete_c**2)\n",
       "num_deltas = 60\n",
       "r_max_arr = [1, 3, 5, 10, 30, 50, 100, 500, 1000]\n",
       "all_stats = [None] * len(r_max_arr)\n",
       "for i in xrange(len(r_max_arr)):\n",
-      "    post_func = posterior_setup(low=.3, high=.7, discrete_cs = 3, num_s=120, r_max=r_max_arr[i])\n",
-      "    post_stats = {'mean_s1': np.zeros(num_deltas), \n",
-      "                  'mean_s2': np.zeros(num_deltas), \n",
-      "                  'bias_s1': np.zeros(num_deltas), \n",
-      "                  'bias_s2': np.zeros(num_deltas), \n",
-      "                  'var_s1': np.zeros(num_deltas), \n",
-      "                  'var_s2': np.zeros(num_deltas), \n",
-      "                  'cov': np.zeros(num_deltas), \n",
-      "                  'corr': np.zeros(num_deltas)}\n",
+      "    print i\n",
+      "    post_func = posterior_setup(low=.3, high=.7, discrete_c=discrete_c, num_s=60, r_max=r_max_arr[i])\n",
+      "    post_stats = {'mean_s1': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'mean_s2': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'bias_s1': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'bias_s2': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'var_s1': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'var_s2': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'cov': np.zeros((num_deltas, discrete_c**2)), \n",
+      "                  'corr': np.zeros((num_deltas, discrete_c**2))}\n",
       "\n",
       "    for delta_s in range(num_deltas):\n",
-      "        test_data = generate_testset(s1, s1 + delta_s, 300)\n",
-      "        generate_testset(s1, s1 + delta_s, 300, discrete_c=None, low=.3, high=.7, r_max=r_max_arr[i])\n",
+      "        test_data = generate_testset(s1, s1 + delta_s, ndata, discrete_c=discrete_c, low=.3, high=.7, r_max=r_max_arr[i])\n",
       "        r, _, _ = test_data\n",
       "        posts = get_posteriors(r, post_func)\n",
       "        post_means = np.array((posts['mean_s1'], posts['mean_s2']))\n",
-      "        stats = get_statistics(s1, s1 + delta_s, post_means)\n",
-      "        post_stats['mean_s1'][delta_s] = stats['mean_s1']\n",
-      "        post_stats['mean_s2'][delta_s] = stats['mean_s2']\n",
-      "        post_stats['bias_s1'][delta_s] = stats['bias_s1']\n",
-      "        post_stats['bias_s2'][delta_s] = stats['bias_s2']\n",
-      "        post_stats['var_s1'][delta_s] = stats['var_s1']\n",
-      "        post_stats['var_s2'][delta_s] = stats['var_s2']\n",
-      "        post_stats['cov'][delta_s] = stats['cov']\n",
-      "        post_stats['corr'][delta_s] = stats['corr']\n",
+      "        for c in range(discrete_c**2):\n",
+      "            post_means_c = post_means.T[(ndata_per_c*c):(ndata_per_c*(c+1))]\n",
+      "            stats = get_statistics(s1, s1 + delta_s, post_means_c)\n",
+      "\n",
+      "            post_stats['mean_s1'][delta_s][c] = stats['mean_s1']\n",
+      "            post_stats['mean_s2'][delta_s][c] = stats['mean_s2']\n",
+      "            post_stats['bias_s1'][delta_s][c] = stats['bias_s1']\n",
+      "            post_stats['bias_s2'][delta_s][c] = stats['bias_s2']\n",
+      "            post_stats['var_s1'][delta_s][c] = stats['var_s1']\n",
+      "            post_stats['var_s2'][delta_s][c] = stats['var_s2']\n",
+      "            post_stats['cov'][delta_s][c] = stats['cov']\n",
+      "            post_stats['corr'][delta_s][c] = stats['corr']\n",
       "    all_stats[i] = post_stats"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0\n",
+        "1"
+       ]
+      }
+     ]
     },
     {
      "cell_type": "code",
