--- a/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +302,230 @@
      "text": [
       "0\n",
       "34 trials per contrast level\n",
-      "34"
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "1\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "2\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "3\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n",
+      "34 trials per contrast level\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-e862c61bec63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_testset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstim_0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstim_1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdelta_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiscrete_c\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdiscrete_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m.7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mr_max_arr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mposts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_posteriors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpost_func\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0mpost_means\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mposts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mean_s1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mean_s2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscrete_c\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-61dbeb0a22e2>\u001b[0m in \u001b[0;36mget_posteriors\u001b[0;34m(r, post_func)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_posteriors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpost_func\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mposteriors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'mean_s1'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'mean_s2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'var_s1'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'var_s2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpost_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m     \u001b[0mposteriors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mean_s1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposteriors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mean_s2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposteriors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'var_s1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposteriors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'var_s2'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mposteriors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-61dbeb0a22e2>\u001b[0m in \u001b[0;36mposterior\u001b[0;34m(r, means, s1_grid, s2_grid)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mposterior\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmeans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms1_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms2_grid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mns_liks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoisson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpmf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmeans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mstim_liks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mns_liks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m#p_s = 2/14400\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/scipy/stats/_distn_infrastructure.pyc\u001b[0m in \u001b[0;36mpmf\u001b[0;34m(self, k, *args, **kwds)\u001b[0m\n\u001b[1;32m   2749\u001b[0m         \u001b[0mplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcond0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbadvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2750\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2751\u001b[0;31m             \u001b[0mgoodargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margsreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2752\u001b[0m             \u001b[0mplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pmf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mgoodargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2753\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/scipy/stats/_distn_infrastructure.pyc\u001b[0m in \u001b[0;36margsreduce\u001b[0;34m(cond, *args)\u001b[0m\n\u001b[1;32m    570\u001b[0m         \u001b[0mnewargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnewargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    571\u001b[0m     \u001b[0mexpand_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mcond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 572\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marr1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mexpand_arr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0marr1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnewargs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    573\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    574\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
