--- a/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
@@ -668,122 +668,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2222 trials per contrast level\n",
-      "33 trials per contrast level\n",
-      "... building the model\n",
-      "... training\n",
-      "epoch 0, validation error 391.437682\n",
-      "epoch 1, validation error 331.049776\n",
-      "epoch 2, validation error 302.974602\n",
-      "epoch 3, validation error 286.152824\n",
-      "epoch 4, validation error 275.191437\n",
-      "epoch 5, validation error 267.341078\n",
-      "epoch 6, validation error 262.144289\n",
-      "epoch 7, validation error 258.159233\n",
-      "epoch 8, validation error 255.272019\n",
-      "epoch 9, validation error 252.971393\n",
-      "epoch 10, validation error 251.094887\n",
-      "epoch 11, validation error 248.907777\n",
-      "epoch 12, validation error 246.597915\n",
-      "epoch 13, validation error 244.091177\n",
-      "epoch 14, validation error 241.513410\n",
-      "epoch 15, validation error 239.202170\n",
-      "epoch 16, validation error 237.075406\n",
-      "epoch 17, validation error 235.139509\n",
-      "epoch 18, validation error 233.195338\n",
-      "epoch 19, validation error 231.524927\n",
-      "epoch 20, validation error 229.929480\n",
-      "epoch 21, validation error 228.408296\n",
-      "epoch 22, validation error 226.971767\n",
-      "epoch 23, validation error 225.676837\n",
-      "epoch 24, validation error 224.406477\n",
-      "epoch 25, validation error 223.190850\n",
-      "epoch 26, validation error 221.724044\n",
-      "epoch 27, validation error 220.496046\n",
-      "epoch 28, validation error 219.537091\n",
-      "epoch 29, validation error 218.543063\n",
-      "epoch 30, validation error 217.666876\n",
-      "epoch 31, validation error 216.863309\n",
-      "epoch 32, validation error 216.017619\n",
-      "epoch 33, validation error 215.139145\n",
-      "epoch 34, validation error 214.226496\n",
-      "epoch 35, validation error 213.377329\n",
-      "epoch 36, validation error 212.477411\n",
-      "epoch 37, validation error 211.701416\n",
-      "epoch 38, validation error 210.915223\n",
-      "epoch 39, validation error 210.233886\n",
-      "epoch 40, validation error 209.590678\n",
-      "epoch 41, validation error 208.853217\n",
-      "epoch 42, validation error 208.084948\n",
-      "epoch 43, validation error 207.287594\n",
-      "epoch 44, validation error 206.338779\n",
-      "epoch 45, validation error 205.471921\n",
-      "epoch 46, validation error 204.532622\n",
-      "epoch 47, validation error 203.561145\n",
-      "epoch 48, validation error 202.631790\n",
-      "epoch 49, validation error 201.622624\n",
-      "epoch 50, validation error 200.804851\n",
-      "epoch 51, validation error 199.850961\n",
-      "epoch 52, validation error 198.908556\n",
-      "epoch 53, validation error 197.909014\n",
-      "epoch 54, validation error 196.826987\n",
-      "epoch 55, validation error 195.788661\n",
-      "epoch 56, validation error 194.690485\n",
-      "epoch 57, validation error 193.589033\n",
-      "epoch 58, validation error 192.439478\n",
-      "epoch 59, validation error 191.148426\n",
-      "epoch 60, validation error 189.908728\n",
-      "epoch 61, validation error 188.793216\n",
-      "epoch 62, validation error 189.032809\n",
-      "epoch 63, validation error 187.749581\n",
-      "epoch 64, validation error 186.314990\n",
-      "epoch 65, validation error 184.952593\n",
-      "epoch 66, validation error 183.591612\n",
-      "epoch 67, validation error 182.165490\n",
-      "epoch 68, validation error 180.750886\n",
-      "epoch 69, validation error 179.272988\n",
-      "epoch 70, validation error 177.778575\n",
-      "epoch 71, validation error 176.238806\n",
-      "epoch 72, validation error 174.674533\n",
-      "epoch 73, validation error 173.096336\n",
-      "epoch 74, validation error 171.471035\n",
-      "epoch 75, validation error 169.731439\n",
-      "epoch 76, validation error 168.012831\n",
-      "epoch 77, validation error 166.320033\n",
-      "epoch 78, validation error 164.560923\n",
-      "epoch 79, validation error 162.750822\n",
-      "epoch 80, validation error 160.926185\n",
-      "epoch 81, validation error 159.048092\n",
-      "epoch 82, validation error 157.074893\n",
-      "epoch 83, validation error 155.112427\n",
-      "epoch 84, validation error 153.093391\n",
-      "epoch 85, validation error 151.062106\n",
-      "epoch 86, validation error 148.949000\n",
-      "epoch 87, validation error 146.817356\n",
-      "epoch 88, validation error 144.718268\n",
-      "epoch 89, validation error 142.644105\n",
-      "epoch 90, validation error 140.422675\n",
-      "epoch 91, validation error 138.207499\n",
-      "epoch 92, validation error 136.105660\n",
-      "epoch 93, validation error 133.885104\n",
-      "epoch 94, validation error 131.577785\n",
-      "epoch 95, validation error 129.390532\n",
-      "epoch 96, validation error 127.109243\n",
-      "epoch 97, validation error 124.910830\n",
-      "epoch 98, validation error 122.705290\n",
-      "epoch 99, validation error 120.570433\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data_1 = generate_testset(19998, discrete_c=3, low=.3, high=.7)\n",
     "valid_data_1 = generate_testset(297, discrete_c=3, low=.3, high=.7)\n",
@@ -802,26 +691,215 @@
     "                nn, nnx, valid_nn = train_nn(train_data_1, valid_dataset=valid_data_1, n_hidden=20, learning_rate=lr, n_epochs=100, rho=rho, mu=mu, nesterov=n)\n",
     "                nn_df.loc[ind] = [lr, rho, mu, n, valid_nn[99]]\n",
     "                nns[lr, rho, mu, n] = nn, nnx, valid_nn\n",
-    "                ind += 1\n",
-    "                \n",
+    "                ind += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pickling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "output = (nn_df, nns)\n",
-    "pkl_file = open('nn_df.pkl', 'wb')\n",
+    "pkl_file = open('nn_optim.pkl', 'wb')\n",
     "pickle.dump(output, pkl_file)\n",
     "pkl_file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "pkl_file = open('nn_optim.pkl', 'rb')\n",
-    "nn_df, nns = pickle.load(pkl_file)\n",
-    "\n",
-    "nn_df[nn_df.lr == -1]"
+    "nn_df, nns = pickle.load(pkl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lr</th>\n",
+       "      <th>rho</th>\n",
+       "      <th>mu</th>\n",
+       "      <th>nest</th>\n",
+       "      <th>valid_nn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td>  0.99</td>\n",
+       "      <td>    0</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 23.62539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td>  0.99</td>\n",
+       "      <td> 0.95</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 24.06649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td> 0.999</td>\n",
+       "      <td> 0.95</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 25.07611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td>  0.99</td>\n",
+       "      <td>  0.9</td>\n",
+       "      <td>  True</td>\n",
+       "      <td>   25.766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td> 0.999</td>\n",
+       "      <td>  0.9</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 26.92505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.95</td>\n",
+       "      <td>  0.9</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 27.41485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td>  0.95</td>\n",
+       "      <td> 0.95</td>\n",
+       "      <td> False</td>\n",
+       "      <td>  27.6143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td>  0.75</td>\n",
+       "      <td>    0</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 27.88683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>283</th>\n",
+       "      <td> 0.0005</td>\n",
+       "      <td> 0.999</td>\n",
+       "      <td> 0.95</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 28.00329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.75</td>\n",
+       "      <td> 0.75</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 28.20586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.75</td>\n",
+       "      <td>    0</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 28.59583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.75</td>\n",
+       "      <td> 0.95</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 28.69929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.99</td>\n",
+       "      <td> 0.75</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 28.79722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.95</td>\n",
+       "      <td> 0.75</td>\n",
+       "      <td> False</td>\n",
+       "      <td> 28.82443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>  0.001</td>\n",
+       "      <td>  0.95</td>\n",
+       "      <td> 0.95</td>\n",
+       "      <td>  True</td>\n",
+       "      <td> 28.87836</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         lr    rho    mu   nest  valid_nn\n",
+       "265  0.0005   0.99     0  False  23.62539\n",
+       "270  0.0005   0.99  0.95   True  24.06649\n",
+       "282  0.0005  0.999  0.95   True  25.07611\n",
+       "268  0.0005   0.99   0.9   True    25.766\n",
+       "208   0.001  0.999   0.9   True  26.92505\n",
+       "184   0.001   0.95   0.9   True  27.41485\n",
+       "259  0.0005   0.95  0.95  False   27.6143\n",
+       "228  0.0005   0.75     0   True  27.88683\n",
+       "283  0.0005  0.999  0.95  False  28.00329\n",
+       "159   0.001   0.75  0.75  False  28.20586\n",
+       "157   0.001   0.75     0  False  28.59583\n",
+       "163   0.001   0.75  0.95  False  28.69929\n",
+       "194   0.001   0.99  0.75   True  28.79722\n",
+       "183   0.001   0.95  0.75  False  28.82443\n",
+       "186   0.001   0.95  0.95   True  28.87836"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn_df.sort('valid_nn', ascending=1)[0:15]"
    ]
   },
   {
