--- a/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -141,8 +141,10 @@
     "        c_0, c_1 = np.concatenate((np.ones((2, ndata/2)) * low, np.ones((2, ndata/2)) * high), axis=1)\n",
     "    elif discrete_c:\n",
     "        cs = np.linspace(low, high, discrete_c)\n",
-    "        perm_cs = cartesian((cs, cs)).T\n",
-    "        c_0, c_1 = np.repeat(perm_cs, ndata/(discrete_c**2), axis=1)\n",
+    "        perm_cs = cartesian((cs, cs))\n",
+    "        c_arr = np.repeat(perm_cs, ndata/(discrete_c**2), axis=0)\n",
+    "        np.random.shuffle(c_arr)\n",
+    "        c_0, c_1 = c_arr.T\n",
     "        print ndata/(discrete_c**2), \"trials per contrast level\"\n",
     "        if ndata%(discrete_c**2) != 0:\n",
     "            print \"Not divisible, only generated\", ndata / (discrete_c**2) * (discrete_c**2), \"trials\"\n",
@@ -160,8 +162,8 @@
     "        c_range = high - low\n",
     "        if discrete_c:\n",
     "            cs = np.linspace(low, high, discrete_c)\n",
-    "            perm_cs = cartesian((cs, cs)).T\n",
-    "            c_0, c_1 = np.repeat(perm_cs, ndata/(discrete_c**2), axis=1)\n",
+    "            perm_cs = cartesian((cs, cs))\n",
+    "            c_0, c_1 = np.repeat(perm_cs, ndata/(discrete_c**2), axis=0).T\n",
     "            print ndata/(discrete_c**2), \"trials per contrast level\"\n",
     "            if ndata%(discrete_c**2) != 0:\n",
     "                print \"Not divisible, only generated\", ndata / (discrete_c**2) * (discrete_c**2), \"trials\"\n",
