--- a/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -271,6 +271,12 @@
     "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
     "    p = np.array([post_func(r[i]) for i in range(len(r))]).T\n",
     "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
+    "    return posteriors\n",
+    "def get_posteriors_pool(r, post_func):\n",
+    "    pool = mp.Pool(processes=8)\n",
+    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    p = np.array(pool.map(post_func, r)).T\n",
+    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
     "    return posteriors"
    ]
   },
@@ -283,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -1548,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -1562,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -1600,6 +1606,152 @@
     "start_time = time.time()\n",
     "results = pool.map(train_nns_part, xrange(len(params)))\n",
     "print time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... building the model\n",
+      "... training\n",
+      "epoch 0, validation error 66.083391\n",
+      "epoch 1, validation error 56.068045\n",
+      "epoch 2, validation error 51.310070\n",
+      "epoch 3, validation error 48.308448\n",
+      "epoch 4, validation error 46.218817\n",
+      "epoch 5, validation error 44.475801\n",
+      "epoch 6, validation error 42.946094\n",
+      "epoch 7, validation error 41.480175\n",
+      "epoch 8, validation error 39.942065\n",
+      "epoch 9, validation error 38.116291\n",
+      "epoch 10, validation error 35.653807\n",
+      "epoch 11, validation error 32.335672\n",
+      "epoch 12, validation error 28.655118\n",
+      "epoch 13, validation error 25.735693\n",
+      "epoch 14, validation error 23.900329\n",
+      "epoch 15, validation error 22.801718\n",
+      "epoch 16, validation error 22.187303\n",
+      "epoch 17, validation error 21.718775\n",
+      "epoch 18, validation error 21.391066\n",
+      "epoch 19, validation error 21.121182\n",
+      "epoch 20, validation error 20.904138\n",
+      "epoch 21, validation error 20.712354\n",
+      "epoch 22, validation error 20.543445\n",
+      "epoch 23, validation error 20.390410\n",
+      "epoch 24, validation error 20.265719\n",
+      "epoch 25, validation error 20.123532\n",
+      "epoch 26, validation error 19.995666\n",
+      "epoch 27, validation error 19.875963\n",
+      "epoch 28, validation error 19.751073\n",
+      "epoch 29, validation error 19.622882\n",
+      "epoch 30, validation error 19.491700\n",
+      "epoch 31, validation error 19.373769\n",
+      "epoch 32, validation error 19.262750\n",
+      "epoch 33, validation error 19.183130\n",
+      "epoch 34, validation error 19.103611\n",
+      "epoch 35, validation error 19.031859\n",
+      "epoch 36, validation error 18.952542\n",
+      "epoch 37, validation error 18.886335\n",
+      "epoch 38, validation error 18.797200\n",
+      "epoch 39, validation error 18.710230\n",
+      "epoch 40, validation error 18.617575\n",
+      "epoch 41, validation error 18.503162\n",
+      "epoch 42, validation error 18.423942\n",
+      "epoch 43, validation error 18.321915\n",
+      "epoch 44, validation error 18.224869\n",
+      "epoch 45, validation error 18.123842\n",
+      "epoch 46, validation error 18.022039\n",
+      "epoch 47, validation error 17.906831\n",
+      "epoch 48, validation error 17.783459\n",
+      "epoch 49, validation error 17.648815\n",
+      "epoch 50, validation error 17.515417\n",
+      "epoch 51, validation error 17.395393\n",
+      "epoch 52, validation error 17.253865\n",
+      "epoch 53, validation error 17.125165\n",
+      "epoch 54, validation error 16.987601\n",
+      "epoch 55, validation error 16.873769\n",
+      "epoch 56, validation error 16.762968\n",
+      "epoch 57, validation error 16.663996\n",
+      "epoch 58, validation error 16.586750\n",
+      "epoch 59, validation error 16.519723\n",
+      "epoch 60, validation error 16.446772\n",
+      "epoch 61, validation error 16.375650\n",
+      "epoch 62, validation error 16.312805\n",
+      "epoch 63, validation error 16.271489\n",
+      "epoch 64, validation error 16.217727\n",
+      "epoch 65, validation error 16.154356\n",
+      "epoch 66, validation error 16.118097\n",
+      "epoch 67, validation error 16.067221\n",
+      "epoch 68, validation error 16.007983\n",
+      "epoch 69, validation error 15.955594\n",
+      "epoch 70, validation error 15.913910\n",
+      "epoch 71, validation error 15.867677\n",
+      "epoch 72, validation error 15.813125\n",
+      "epoch 73, validation error 15.765536\n",
+      "epoch 74, validation error 15.712443\n",
+      "epoch 75, validation error 15.674350\n",
+      "epoch 76, validation error 15.622719\n",
+      "epoch 77, validation error 15.579834\n",
+      "epoch 78, validation error 15.548892\n",
+      "epoch 79, validation error 15.512092\n",
+      "epoch 80, validation error 15.465490\n",
+      "epoch 81, validation error 15.417389\n",
+      "epoch 82, validation error 15.366923\n",
+      "epoch 83, validation error 15.315162\n",
+      "epoch 84, validation error 15.262837\n",
+      "epoch 85, validation error 15.219098\n",
+      "epoch 86, validation error 15.167522\n",
+      "epoch 87, validation error 15.126895\n",
+      "epoch 88, validation error 15.081781\n",
+      "epoch 89, validation error 15.039509\n",
+      "epoch 90, validation error 14.999226\n",
+      "epoch 91, validation error 14.953615\n",
+      "epoch 92, validation error 14.908465\n",
+      "epoch 93, validation error 14.866550\n",
+      "epoch 94, validation error 14.864022\n",
+      "epoch 95, validation error 14.828887\n",
+      "epoch 96, validation error 14.806166\n",
+      "epoch 97, validation error 14.808930\n",
+      "epoch 98, validation error 14.773680\n",
+      "epoch 99, validation error 14.730020\n",
+      "232.427324057\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start_time = time.time()\n",
+    "train_nns_part(0)\n",
+    "print time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "432"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(params)"
    ]
   },
   {
@@ -1816,6 +1968,36 @@
     "ax[0].set_title(\"Variance\")\n",
     "ax[0].legend(loc='upper left')\n",
     "f.set_size_inches(15,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400 trials per contrast level\n",
+      "5.3712220192\n",
+      "7.25949192047\n"
+     ]
+    }
+   ],
+   "source": [
+    "import multiprocessing as mp\n",
+    "post_func = posterior_setup(low=c, high=c, discrete_c=1, num_s=60, r_max=1)\n",
+    "test_data = generate_testset(400, stim_0=-30, stim_1=0, discrete_c=1, low=4, high=4, r_max=1)\n",
+    "r, _, _ = test_data\n",
+    "start_time = time.time()\n",
+    "get_posteriors_pool(r, post_func)\n",
+    "print time.time() - start_time\n",
+    "start_time2 = time.time()\n",
+    "get_posteriors(r, post_func)\n",
+    "print time.time() - start_time2"
    ]
   },
   {
