--- a/Code/Demixing/Demixing DNN.ipynb
+++ b/Code/Demixing/Demixing DNN.ipynb
@@ -10,7 +10,6 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "import os\n",
     "import sys\n",
     "import time\n",
     "import theano\n",
@@ -21,6 +20,7 @@
     "from scipy.stats import poisson\n",
     "import matplotlib.patches as mpatches\n",
     "from functools import partial\n",
+    "import pickle\n",
     "\n",
     "nneuron = 61\n",
     "min_angle = -90\n",
