--- a/Code/Demixing/Demixing DNN.ipynb
+++ b/Code/Demixing/Demixing DNN.ipynb
@@ -2625,9 +2625,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1296\n"
+     ]
+    }
+   ],
+   "source": [
+    "lrs = np.array([.01, .005, .001, .0005, .0001, .00001])\n",
+    "rhos = np.array([0, .75, .9, .95, .99, .999])\n",
+    "mus = np.array([0, .75, .9, .95, .99, .999])\n",
+    "nests = np.array([True, False])\n",
+    "cs = np.array([1, 2, 4])\n",
+    "params = cartesian([lrs, rhos, mus, nests, cs])\n",
+    "print len(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
