--- a/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
@@ -249,11 +249,14 @@
     "    #p_s = 2/14400\n",
     "    #logp_s = np.log(p_s)\n",
     "    logp_s = -3.8573325\n",
+    "    #p_c = 1/9\n",
+    "    #logp_c = np.log(p_c)\n",
+    "    logp_c = -0.95424250943\n",
     "    loglik = np.sum(np.log(ns_liks), axis=1)\n",
-    "    mean1 = np.sum(s1_grid * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    mean2 = np.sum(s2_grid * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    expsquare1 = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    expsquare2 = np.sum(np.square(s2_grid) * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
+    "    mean1 = np.sum(s1_grid * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    mean2 = np.sum(s2_grid * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    expsquare1 = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    expsquare2 = np.sum(np.square(s2_grid) * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
     "    var1 = expsquare1 - np.square(mean1)\n",
     "    var2 = expsquare2 - np.square(mean2)\n",
     "    return mean1, mean2, var1, var2\n",
