--- a/Code/Demixing/Demixing Minicon Plots and Code Part 4.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 4.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -181,13 +181,11 @@
     "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
     "    return r, s, c\n",
     "\n",
-    "def generate_trainset_cat(ndata, low=.3, high=1.3, crange=.5, r_max=10):\n",
+    "def generate_trainset_cat(ndata, c_0=4, c_1=1, crange=.5, r_max=1):\n",
     "    numvec = np.random.binomial(1, .5, size=ndata).astype(int)\n",
-    "    c_0 = random_c(ndata, 1, high, high+crange, True)\n",
-    "    c_1 = random_c(ndata, 1, low, low+crange, True)\n",
     "    s_0, s_1 = np.random.rand(2, ndata) * 120 - 60\n",
     "    r, numvec, s, c  = generate_popcode_data_cat(ndata, numvec, nneuron, sigtc_sq, c_50, r_max, \"poisson\", s_0, s_1, c_0, c_1)\n",
-    "    y = s[range(ndata), numvec]\n",
+    "    y = s_0\n",
     "    return r, y, s, c, numvec \n",
     "    \n",
     "def generate_popcode_data_cat(ndata, numvec, nneuron, sigtc_sq, c_50, r_max, noise, s_0, s_1, c_0, c_1):\n",
@@ -199,9 +197,7 @@
     "    stim_0 = c0vec * s_0t.T\n",
     "    s_1t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
     "    stim_1 = c1vec * s_1t.T\n",
-    "    #r = r_max * (stim_0 + stim_1)/(c_50 + c_rms)\n",
-    "    r = r_max * (stim_0 + stim_1)/(c_rms)\n",
-    "    #r = r_max * (stim_0 + stim_1)\n",
+    "    r = r_max * (stim_0 + stim_1)\n",
     "    r = r.T\n",
     "    s = np.array((s_0, s_1)).T\n",
     "    s = s/90\n",
@@ -213,51 +209,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def lik_means(s_1, s_2, c_0=.5, c_1=.5, sprefs=sprefs, sigtc_sq=sigtc_sq):\n",
+    "def lik_means(s_1, s_2, cat, c_0=4, c_1=1, sprefs=sprefs, sigtc_sq=sigtc_sq, r_max=1):\n",
+    "    c0vec = c_0 * np.ones(len(cat))\n",
+    "    c1vec = c_1 * cat\n",
     "    sprefs_data = np.tile(sprefs, (len(s_1), 1))\n",
     "    s_0t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
-    "    stim_0 = c_0 * s_0t.T\n",
+    "    stim_0 = c0vec * s_0t.T\n",
     "    s_1t = np.exp(-np.square((np.transpose(np.tile(s_2, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
-    "    stim_1 = c_1 * s_1t.T\n",
+    "    stim_1 = c1vec * s_1t.T\n",
     "    r = r_max * (stim_0 + stim_1)\n",
     "    return r.T\n",
-    "def posterior(r, means, s1_grid, s2_grid):\n",
-    "    ns_liks = poisson.pmf(r, mu=means)\n",
-    "    stim_liks = np.prod(ns_liks, axis=1)\n",
+    "def posterior(r, means, s1_grid):\n",
+    "    liks = poisson.pmf(r, mu=means)\n",
     "    #p_s = 2/14400\n",
     "    #logp_s = np.log(p_s)\n",
     "    logp_s = -3.8573325\n",
-    "    loglik = np.sum(np.log(ns_liks), axis=1)\n",
-    "    mean1 = np.sum(s1_grid * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    mean2 = np.sum(s2_grid * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    expsquare1 = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    expsquare2 = np.sum(np.square(s2_grid) * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
-    "    var1 = expsquare1 - np.square(mean1)\n",
-    "    var2 = expsquare2 - np.square(mean2)\n",
-    "    return mean1, mean2, var1, var2\n",
-    "def posterior_setup(low=.3, high=.7, discrete_cs = 3, num_s=100):\n",
+    "    #p_cat = 1/2\n",
+    "    #logp_cat = np.log(p_cat)\n",
+    "    logp_cat = -0.301029996\n",
+    "    loglik = np.sum(np.log(liks), axis=1)\n",
+    "    mean = np.sum(s1_grid * np.exp(loglik + logp_s + logp_cat)/np.sum(np.exp(loglik + logp_s + logp_cat)))\n",
+    "    expsquare = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s + logp_cat)/np.sum(np.exp(loglik + logp_s + logp_cat)))\n",
+    "    var = expsquare - np.square(mean)\n",
+    "    return mean, var\n",
+    "def posterior_setup(high=4, low=1, num_s=100, r_max=10):\n",
     "    grid = np.linspace(-60, 60, num_s)\n",
-    "    s1s = np.concatenate([[grid[i]]*(num_s-i) for i in range(num_s)])\n",
-    "    cs = np.linspace(low, high, discrete_cs)\n",
-    "    s1_grid, c1_grid, c2_grid = cartesian((s1s, cs, cs)).T\n",
-    "    s2s = np.concatenate([grid[i:num_s+1] for i in range(num_s)])\n",
-    "    s2_grid = np.repeat(s2s, (discrete_cs**2), axis=0)\n",
-    "    means = lik_means(s1_grid, s2_grid, c_0=c1_grid, c_1=c2_grid)\n",
-    "    means2 = lik_means(s1s, s2s)\n",
-    "    partial_post = partial(posterior, means=means, s1_grid=s1_grid, s2_grid=s2_grid)\n",
+    "    cats = [0, 1]\n",
+    "    s1_grid, s2_grid, cat_grid = cartesian((grid, grid, cats)).T\n",
+    "    means = lik_means(s1_grid, s2_grid, cat_grid, c_0=high, c_1=low, r_max=r_max)\n",
+    "    partial_post = partial(posterior, means=means, s1_grid=s1_grid)\n",
     "    return partial_post\n",
     "def get_posteriors(r, post_func):\n",
-    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    posteriors = {'mean': None, 'var': None}\n",
     "    p = np.array([post_func(r[i]) for i in range(len(r))]).T\n",
+    "    posteriors['mean'], posteriors['var'] = p\n",
+    "    return posteriors\n",
+    "def get_posteriors_pool(r, post_func):\n",
+    "    pool = mp.Pool(processes=8)\n",
+    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    p = np.array(pool.map(post_func, r)).T\n",
     "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
     "    return posteriors"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "r, y, s, c, numvec = generate_trainset_cat(100, c_0=4, c_1=1, crange=.5, r_max=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': array([ 11.56097561,  56.25426629,  41.7522568 , -48.98094801,\n",
+       "         17.23076923, -11.38235294, -25.05882355, -25.40000002,\n",
+       "         -0.4       , -11.09090909,   9.39130435,   6.3       ,\n",
+       "        -13.5       , -19.81578947,  45.10848273, -56.91576573,\n",
+       "         40.42114832,  14.72222222, -32.30232658,  -3.06666667,\n",
+       "        -43.27318874,   2.90909091,  44.25045414,   9.77777778,\n",
+       "         -0.48703324,  -7.65789474, -19.15384615, -20.70588235,\n",
+       "         -3.36585366,  25.11428573, -48.48675651,  53.34505399,\n",
+       "         51.7685057 ,   0.48837209, -50.39193039,  22.90909091,\n",
+       "        -55.3346948 ,  -0.3       , -25.76470591,  -5.55      ,\n",
+       "        -25.7857143 ,  15.48387097,  27.51724148,  20.36842105,\n",
+       "         36.95745879, -36.90910976,  25.29545456, -15.6       ,\n",
+       "          4.        ,  -0.7       , -25.73684213,  34.05882733,\n",
+       "         -2.04545455,  -4.31707317,  27.72727282,  57.89047289,\n",
+       "         -5.08631318, -19.7       ,  55.02514289, -47.80399145,\n",
+       "         11.8       ,  56.4896573 ,   8.1       ,   1.8       ,\n",
+       "         18.41860465,  32.81250204,  48.92770037,  34.13333601,\n",
+       "         42.45485818,  20.23255814,   3.75      ,  25.89473692,\n",
+       "        -55.89443196, -28.7500001 , -31.93548527, -55.68810617,\n",
+       "        -51.56189763,  33.75000253,   4.36363636, -44.61608018,\n",
+       "        -19.52941176,   0.58333333,  45.44608223,  39.12008922,\n",
+       "         -4.6097561 ,  48.33637892,  38.08336439, -21.84864273,\n",
+       "        -17.70588235,  56.62275933, -31.31707377, -20.72727273,\n",
+       "         17.65909091, -42.00026185,  57.66917428,   6.64285714,\n",
+       "        -37.68004255,  13.17391304,  38.34379188, -21.97297297]),\n",
+       " 'var': array([ 2.43902439,  2.44124405,  2.70810874,  2.32968156,  2.56410256,\n",
+       "         2.94117647,  2.9411765 ,  3.33333339,  2.22222222,  3.03030303,\n",
+       "         2.17391304,  3.33333333,  2.5       ,  2.63157895,  3.57358898,\n",
+       "         2.21433525,  2.63170517,  1.85185185,  2.32558274,  2.22222222,\n",
+       "         3.03096244,  3.03030303,  2.08377452,  3.7037037 ,  2.58399753,\n",
+       "         2.63157895,  1.92307692,  1.96078432,  2.43902439,  2.85714289,\n",
+       "         4.0112991 ,  2.82785315,  3.14761788,  2.3255814 ,  3.46566893,\n",
+       "         3.03030304,  3.83675833,  2.5       ,  2.94117652,  2.5       ,\n",
+       "         2.38095241,  3.22580645,  3.44827608,  2.63157895,  2.12767329,\n",
+       "         3.0303335 ,  2.27272729,  2.85714286,  3.03030303,  3.33333333,\n",
+       "         2.63157898,  2.94118283,  4.54545455,  2.43902439,  3.03030321,\n",
+       "         2.39433862,  3.35043723,  3.33333333,  2.98290235,  3.33901244,\n",
+       "         2.22222222,  2.65141871,  2.5       ,  2.5       ,  2.3255814 ,\n",
+       "         3.12500366,  2.56907027,  2.22222558,  3.03075744,  2.3255814 ,\n",
+       "         3.57142857,  5.26315815,  2.78747422,  2.08333346,  3.22580899,\n",
+       "         4.36694605,  3.04990071,  2.50000359,  3.03030303,  2.564924  ,\n",
+       "         1.96078431,  2.77777778,  3.70641936,  4.00018101,  2.43902439,\n",
+       "         2.22510134,  2.77782294,  3.02067341,  1.96078431,  2.75612347,\n",
+       "         2.43902525,  3.03030303,  2.27272727,  3.12539563,  2.55700957,\n",
+       "         2.38095238,  4.0000887 ,  2.17391304,  3.12506795,  2.70270271])}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "post_func = posterior_setup(high=4, low=1, num_s=100, r_max=10)\n",
+    "get_posteriors(r, post_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
